# test_kedro_mp

./: README.md  pyproject.toml  test_kedro_noproject.py
docs/source/: conf.py  index.rst
src/: setup.py
src/test_kedro_mp/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/test_kedro_mp/pipelines/test_pipe/: nodes.py  pipeline.py
src/tests/: test_run.py
