[tool.poetry]
name = "test_kedro_mp"
version = "0.1.0"
description = ""
authors = ["Alessio  <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
kedro = "==0.17.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"

[tool.kedro]
package_name = "test_kedro_mp"
project_name = "test_kedro_mp"
project_version = "0.17.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
